# DPI-Bypass

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/dpi-core/: Cargo.toml
crates/dpi-core/src/: engine.rs  error.rs  lib.rs  network.rs  prober.rs  profiles.rs  strategy.rs
crates/dpi-helper/: Cargo.toml
crates/dpi-helper/src/: engine_linux.rs  engine_windows.rs  main.rs
packaging/: dpi-bypass.desktop
packaging/polkit/: dpi-bypass.rules
scripts/: build-engines.ps1  build-engines.sh  gen-assets.sh
src/: api.ts  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  helper.rs  lib.rs  main.rs  monitor.rs  state.rs
src/i18n/: en.json  tr.json
systemd/: dpi-bypass.service
