# Workspace root for DPI-Bypass.
# Members:
#   crates/dpi-core   - platform-agnostic logic (strategy, profiles, prober, network probes)
#   crates/dpi-helper - privileged helper binary (invoked via pkexec on Linux)
#   src-tauri         - Tauri GUI application (depends on dpi-core)
[workspace]
resolver = "2"
members = ["crates/dpi-core", "crates/dpi-helper", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/ATOMGAMERAGA/DPI-Bypass"
rust-version = "1.77"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
