[package]
name = "dpi-bypass"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DPI-Bypass — domain-based anti-censorship app (Tauri GUI)."
default-run = "dpi-bypass"

[lib]
name = "dpi_bypass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dpi-bypass"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dpi-core = { path = "../crates/dpi-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = "5"

[features]
# Enabled by `tauri build`; lets the binary run without a terminal on Windows.
custom-protocol = ["tauri/custom-protocol"]
