[package]
name = "dpi-bypass"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DPI-Bypass — domain-based anti-censorship app (Tauri GUI)."
default-run = "dpi-bypass"

[lib]
name = "dpi_bypass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dpi-bypass"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dpi-core = { path = "../crates/dpi-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = "5"

[features]
# REQUIRED for any release/production build: embeds the frontend so the webview
# serves it directly. Without it tauri::is_dev() is true and the app loads
# devUrl (http://localhost:1420), failing with ERR_CONNECTION_REFUSED on a user
# machine. `cargo tauri build` enables it automatically; a raw `cargo build`
# must pass `--features dpi-bypass/custom-protocol` (enforced by a compile_error
# guard in src/main.rs for release builds).
custom-protocol = ["tauri/custom-protocol"]
