[package]
name = "dpi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Platform-agnostic core for DPI-Bypass: strategies, profiles, prober, network probes."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
