[package]
name = "dpi-helper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Privileged helper for DPI-Bypass: applies/reverts nftables + nfqws on Linux."

[[bin]]
name = "dpi-bypass-helper"
path = "src/main.rs"

[dependencies]
dpi-core = { path = "../dpi-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
